--- a/new/css/style.css
+++ b/new/css/style.css
@@ -1,3 +1,4 @@
+
 /* || General styles */
 
 body {
@@ -9,23 +10,23 @@ body {
 	font-family: 'Source Sans Pro', sans-serif;
 	color:#333333;
 	background-color:#ffffff;
-}
+	}
 
-.content-area {
+.content {
 	
 }
 
-.link-area {
+area {
     display: inline;
     cursor: pointer;
 }
 	
-.main-wrapper {
+.container1 {
 	width:1000px;
 	margin:0 auto;
-}
+	}
 
-.main-container {
+.container {
   display: block;
   width: 100%;
   max-width: 1000px;
@@ -36,7 +37,7 @@ body {
 
 /* || Header Area*/
 
-.title-box {
+.maintitle-box {
 	text-align:center;
 	font-family:Gotham Ultra, Arial, Helvetica, sans-serif;
 	background-color:#154486;
@@ -45,17 +46,17 @@ body {
 	-webkit-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.35);
 	-moz-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.35);
 	box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.35);
-}
+	}
 
-.header-area {
+.header {
 	background-color:#ffffff;
 	padding:12px 0;
 }
-.header-section{
+.headerarea{
 	height: 90px;
 }
 
-.header-content{
+.header1{
 	width: 1024px;
 	height: 90px;
 	margin: 0 auto;
@@ -65,7 +66,7 @@ body {
 /* || Page Sections Full Width*/
 
 
-.page-section-box {
+.page-section {
 	background-color:#154486;
 	padding:40px 0;
 	border-top:none;
@@ -78,9 +79,9 @@ body {
 	-webkit-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
     box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
-}
+	}
 	
-.page-section2-box {
+.page-section2 {
 	background-color:#154486;
 	padding:10px 0;
 	color:white;
@@ -88,11 +89,11 @@ body {
 	font-size:18pt;
 	font-family:Gotham Ultra, Helvetica, sans-serif;
 	margin:20px 0;
-}
+	}
 
 
 	
-.page-img {
+img {
    max-width: 100%;
    max-height: 100%;
 }
@@ -100,14 +101,14 @@ body {
 
 /* || Typography */
 
-.main-title {
+.title {
 	text-align:center;
 	font-size:26pt;
 	font-family:Gotham Ultra, Arial, Helvetica, sans-serif;
 	margin:50px 0;	
-}
+	}
 
-.sub-title{
+.title2{
 	font-family: Gotham Ultra;
     font-size: 26px;
     text-transform: capitalize;
@@ -115,14 +116,14 @@ body {
     margin: 50px 0;
 }
 
-.title-style {
+.title4 {
     text-transform: uppercase;
     font-style: italic;
     text-align: center;
     color: white;
 }
 
-.title-format {
+.title6 {
     padding: 12px;
     border-left: solid 1px #333333;
 	border-right: solid 1px #333333; ;
@@ -136,14 +137,14 @@ body {
     margin-top: 50px;
 }
 
-.title-medium {
+.title8 {
     font-family: Gotham Medium;
     font-size: 24px;
     margin: 50px 0;
 }
 
 
-.sub-title-yellow{
+.subtitle_yellow{
 	text-align: center;
 	font-size: 25pt;
     font-family: Gotham Ultra, Helvetica, sans-serif;
@@ -151,7 +152,7 @@ body {
 	padding-bottom: 20px;
 }
 
-.headline-content{
+.headline{
 	text-align: center;
 	font-size: 25pt;
     font-family: Gotham Ultra, Helvetica, sans-serif;
@@ -159,32 +160,32 @@ body {
 	margin-top: 10px;
 }
 
-.headline1-style {
+.headline1 {
 	font-family: sans-serif;
 	font-weight: 700;
 	font-size:22px;
 	text-align:center;
-}	
+	}	
 
-.headline2-format {
+.headline2 {
     font-family: Gotham Ultra;
     font-size: 20px;
     text-transform: capitalize;
     margin: 50px 0 0;
 }
 
-.section-text {
+.sectiontext {
     font-style: normal;
     text-align: left;
     color: #444444;	
 }
 
-.white-text {	
+.whitetext {	
 	color:white;
 	font-weight:bold;
 	}
 
-.yellow-text {
+.yellowtext {
 	color:#ffcd24;
 	font-weight:bold;
 	}
@@ -193,24 +194,300 @@ body {
 
 /* || Bullet Points & Checkmarks*/
 
-.arrow-icon  {	
+.arrow  {	
 	list-style:none;
 	background-image:url(../images/images-bullet.png);
 	background-repeat:no-repeat;
-	padding:0 0 20px 20px;
-}
+	padding:0 0 20px 40px;
+	margin:20px 0 20px 0;
+	border-bottom: none;
+	
+	}
 
-.check-icon {
+.check  {	
 	list-style:none;
 	background-image:url(../images/images-check.png);
 	background-repeat:no-repeat;
-	padding:0 0 20px 20px;
-}
+	padding:0 0 10px 40px;
+	margin:5px 0 5px 0;
+	
+	}
 
-.blue-icon {
+.dot  {	
 	list-style:none;
-	background-image:url(../images/images-blue.png);
+	background-image:url(../images/images-dot.png);
 	background-repeat:no-repeat;
-	padding:0 0 20px 20px;
+	padding:0 0 10px 40px;
+	margin:5px 0 5px 0;
+	
+	}
+.flag  {	
+	list-style:none;
+	background-image:url(../images/images-flag.png);
+	background-repeat:no-repeat;
+	padding:0 0 10px 40px;
+	margin:5px 0 5px 0;
+	}
+
+.question  {	
+	list-style:none;
+	background-image:url(../images/images-question.png);
+	background-repeat:no-repeat;
+	padding:0 0 10px 40px;
+	margin:20px 0 20px 0;
+	
+	}
+
+.answer  {	
+	list-style:none;
+	background-image:url(../images/images-answer.png);
+	background-repeat:no-repeat;
+	padding:0 0 10px 40px;
+	margin:20px 0 20px 0;
+	
+	}
+
+.tick  {	
+	list-style:none;
+	background-image:url(../images/images-bullet.png);
+	background-repeat:no-repeat;
+	padding:0 0 20px 40px;
+	margin:20px 0 20px 0;
+	border-bottom:1px dashed #333333;
+	
+	}
+	
+.tick2  {	
+	list-style:none;
+	background-image:url(../images/images-bullet.png);
+	background-repeat:no-repeat;
+	padding:0 0 0 45px;
+	margin:20px 0 20px 0;
+		}
+		
+.tick3  {	
+	list-style:none;
+	background-image:url(../images/images-bullet.png);
+	background-repeat:no-repeat;
+	padding:0 0 0 45px;
+	margin:20px 0 27px 0;
+		}
+.tick4  {	
+	list-style:none;
+	background-image:url(../images/images-bullet.png);
+	background-repeat:no-repeat;
+	padding:0 20 0 30px;
+	margin:10px 0 20px 0;
+		}
+
+
+
+/* || Styled Boxes*/
+
+.columnbox {
+	width:900px;
+	border:none;
+	margin:20px auto;
+	}
+
+.columnbox2 {
+	width:900px;
+	border:none;
+	margin:5px auto;
+	}
+
+.vaabox {
+    border: solid 1px #333333;
+    background-color: #f1f1f1;
+    padding: 5px 5px 5px 10px;
+    margin:20px 40px 20px 40px;
+    background-image: url(../images/images-squarebg.png);
+	-webkit-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
 }
 
+.greybox {	
+	background-color:#ebebed;
+	padding:20px 40px 20px 20px;
+	width:800px;
+	margin:40px auto;
+	border:1px solid #333;
+	color:#333333;
+	font-size:14pt;
+	-webkit-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+	}
+	
+
+.bbox hr {
+	border-left:none;
+	border-right:none;
+	border-bottom:none;
+	border-top:solid 1px #CCCCCC;
+	margin:20px 0;
+	}
+
+
+.templatebox {
+	width:800px;
+	margin: 0 auto;
+	font-style:normal;
+	padding:20px;
+	border:1px solid #333333;
+	background-color:#f6f6f6;
+	}
+
+.bonusbox {
+	padding:20px;
+	margin:20px;
+	background-color:#fffaed;
+	border:1px solid #999999;
+	box-shadow: 0px 5px 5px #999999;
+	
+	}
+
+.bonusbox2 {
+	background-color:#fffaed;
+	box-shadow: 0px 5px 5px #999999;
+	padding:20px 40px 20px 20px;
+	width:55%;
+	margin:40px auto;
+	border:4px dashed #AD1903;
+	font-size:14pt;
+	}
+
+.breakoutbox {
+    background-color:#edf3f5;
+	padding:20px 40px 20px 20px;
+	width:80%;
+	margin:40px auto;
+	border:1px solid #333;
+	color:#333333;
+	font-size:14pt;
+	-webkit-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 10px -7px rgba(0,0,0,0.75);
+	}	
+
+
+/* Create two equal columns that float next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 1px;
+  
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+hr {
+    border-bottom: none;
+    border-left: none;
+    border-top: dashed 1px #333333;
+}
+
+
+@font-face {
+
+    font-family: corbel;
+    src: local(corbel), url('../fonts/fonts-corbel.ttf') format('opentype');
+	}
+	
+@font-face {
+	
+	font-family:Gotham Ultra;
+    src: local(Gotham Ultra), url('../fonts/Gotham Ultra.otf') format('opentype');
+	}
+	
+@font-face {
+	
+	font-family:Gotham Medium;
+    src: local(Gotham Medium), url('../fonts/Gotham Medium.otf') format('opentype');
+	}
+		
+		
+* {
+  box-sizing: border-box;
+}
+
+
+	
+	
+@media only screen and (max-width: 1024px) {
+  /* For mobile devices: */
+[class*="header"] {
+  width: 100%;
+  }		
+[class*="container"] {
+  width: 99%;
+  }	
+[class*="content"] {
+    width: 99%;
+}
+[class*="checkbox"] {
+    width: 99%;
+}
+[class*="breakoutbox"] {
+    width: 95%;
+}
+[class*="bbox"] {
+    width: 95%;
+}
+[class*="bbox2"] {
+    width: 95%;
+}
+[class*="greybox"] {
+    width: 95%;
+}
+[class*="boxlist"] {
+    width: 100%;
+}	
+[class*="vaabox"] {
+    width: 95%;
+	padding: 1px 1px;
+    margin: 5px 5px 5px 5px;
+}	
+[class*="testitop"] {
+    width: 95%;
+}
+[class*="testimain"] {
+    width: 85%;
+}
+	 	
+img {
+    max-width: 100%;
+   max-height: 100%;
+}
+	
+}
+
+@media only screen and (max-width: 800px) {
+  /* For mobile devices: */
+[class*="columnbox"] {
+    width: 100%;
+}
+}
+
+@media only screen and (max-width: 600px) {
+  /* For mobile devices: */
+[class*="columnbox"] {
+    width: 100%;
+}
+}
+	
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+	
+	
