--- a/bonus/style.css
+++ b/bonus/style.css
@@ -94,6 +94,10 @@ img {
 
 .ebook-info {
     flex-grow: 1;
+    margin: 0 auto; /* Center the description */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .ebook-info h3 {
