--- a/Affiliate/styles.css
+++ b/Affiliate/styles.css
@@ -1,73 +1,62 @@
-/* Reset some basic elements */
-body, h1, h2, h3, p, form {
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .container {
-    max-width: 600px;
-    margin: 20px auto;
+    max-width: 600px; /* Adjusted for responsiveness */
+    width: 90%; /* Adjusts width on smaller screens */
+    margin: 0 auto;
     padding: 20px;
+    border: 1px solid #ccc;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    background-color: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.container > div {
+    margin-bottom: 10px;
 }
 
 h1, h2 {
-    color: #333;
     text-align: center;
-    margin-bottom: 20px;
-}
-
-/* Space between sections */
-section {
-    margin-bottom: 40px; /* Adjust the space between sections */
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-input[type="text"], input[type="number"], input[type="submit"], button {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-
-input[type="text"], input[type="number"] {
-    border: 1px solid #ddd;
-    background-color: #fff;
-}
-
-input[type="submit"], button {
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    border: none;
-}
-
-input[type="submit"]:hover, button:hover {
-    background-color: #0056b3;
-}
-
-/* Loading and message div */
-#loading, #message, #listMessage, #buyMessage, #withdrawMessage {
-    text-align: center;
     margin-top: 20px;
 }
 
-/* Additional styling for message color set in JavaScript */
-.message-success, .message-error {
-    margin-top: 10px;
+label {
+    display: block;
+    margin-bottom: 10px;
 }
 
-.message-success {
-    color: #28a745;
+input[type="text"], input[type="submit"], input[type="number"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
-.message-error {
-    color: #dc3545;
+input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%; /* Full width on smaller screens */
+        max-width: none; /* Overrides max-width for mobile devices */
+    }
 }
